<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mybottomnavigation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming_event"
        android:name="com.example.mybottomnavigation.ui.upcoming_event.UpcomingEventFragment"
        android:label="@string/upcoming_event"
        tools:layout="@layout/fragment_upcoming_event" />


    <fragment
        android:id="@+id/navigation_finished_event"
        android:name="com.example.mybottomnavigation.ui.finished_event.FinishedEventFragment"
        android:label="@string/finished_event"
        tools:layout="@layout/fragment_finished_event" />

    <fragment
        android:id="@+id/navigation_favorite_event"
        android:name="com.example.mybottomnavigation.ui.favorite_event.FavoriteEventFragment"
        android:label="@string/upcoming_event"
        tools:layout="@layout/fragment_upcoming_event" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.mybottomnavigation.ui.settings.SettingsFragment"
        android:label="@string/upcoming_event"
        tools:layout="@layout/fragment_settings" />
</navigation>